classDiagram
    class AuthService {
        +authenticateUser()
        +authorizeUser()
    }
    class MemberService {
        +registerMember()
        +updateMemberDetails()
    }
    class DependentService {
        +addDependent()
        +updateDependent()
    }
    class EmployeeService {
        +registerEmployee()
        +updateEmployeeDetails()
        +getEmployeeSummary()
    }
    class UserService {
        +getUserDetails()
        +updateUserDetails()
    }
    class GroupService {
        +createGroup()
        +assignUserToGroup()
    }
    class PaymentService {
        +updatePaymentDetails()
        +getPaymentDetails()
    }
    class ActivityService {
        +createActivity()
        +updateActivity()
        +listAllActivities()
    }
    class ClassService {
        +createClass()
        +updateClassDetails()
    }
    class EnrollmentService {
        +enrollMember()
        +trackAttendance()
    }
    class NotificationService {
        +sendNotification()
    }
    class CafeteriaService {
        +recordTransaction()
    }

    AuthService --|> UserService : uses
    MemberService --|> UserService : uses
    MemberService "1" -- "0..*" DependentService : has
    EmployeeService --|> UserService : uses
    GroupService --|> UserService : uses
    PaymentService --|> MemberService : uses
    ActivityService "1" -- "0..*" ClassService : has
    EnrollmentService --|> ClassService : uses
    EnrollmentService --|> MemberService : uses
    NotificationService --|> UserService : uses
    CafeteriaService --|> UserService : uses
